@@ -1,3 +1,8 @@
+1998-07-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* Makefile.am (TCLFILES): Name the Tcl files here, use in EXTRADIST.
+	($(libtkobjc_la_OBJECTS)): Depend on _tcl.x files.
+
 1998-07-07  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* Graph.[hm] (-createElement, -destroyElement:, -setOwnerGraph:,
